--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,13 @@ body {
     background-color: rgb(241, 242, 243);
     display: flex;
     justify-content: center;
+    padding: 0px 100px;
 }
 
 .wrapper {
     max-width: 1200px;
-    padding: 20px;
+    padding: 20px 30px;
+    background-color: #edf2f7;
 }
 
 .contacts,
